# inventory-demand-optimization

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: methodology.md  thesis_summary.md
examples/: run_default_simulation.py
notebooks/: project_walkthrough.ipynb
src/inventory_demand_optimization/: __init__.py  config.py  plotting.py  policies.py  profit.py  simulation.py
tests/: test_policies.py  test_profit.py
